--- a/src/WPFDesktopUI/Views/ShellView.xaml
+++ b/src/WPFDesktopUI/Views/ShellView.xaml
@@ -4,9 +4,72 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFDesktopUI.Views"
-        mc:Ignorable="d"
+        mc:Ignorable="d" FontSize="28"
         Title="ShellView" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    <Border BorderThickness="20">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            
+            <!-- Row 0 -->
+            <TextBlock Text="{Binding Path=FullName, Mode=OneWay}" 
+                       Grid.ColumnSpan="2"
+                       Grid.Row="0" 
+                       Grid.Column="0">
+            </TextBlock>
+
+            <!-- Row 1 -->
+            <TextBox x:Name="FirstName" 
+                     Grid.Row="1" 
+                     Grid.Column="0" 
+                     MinWidth="100">
+            </TextBox>
+            <TextBox x:Name="LastName" 
+                     Grid.Row="1" 
+                     Grid.Column="1" 
+                     MinWidth="100">
+            </TextBox>
+
+            <!-- Row 2 -->
+            <ComboBox x:Name="People" 
+                      Grid.Row="2" 
+                      Grid.Column="0"
+                      SelectedItem="{Binding Path=SelectedPerson, Mode=OneWayToSource}"
+                      DisplayMemberPath="FirstName">
+            </ComboBox>
+            <TextBlock x:Name="SelectedPerson_LastName"
+                       Grid.Row="2"
+                       Grid.Column="1">
+            </TextBlock>
+            
+            <!-- Row 3 -->
+            <Button x:Name="ClearText" 
+                    Grid.Row="3"
+                    Grid.Column="0">
+                Clear Text
+            </Button>
+
+            <!-- Row 4 -->
+            <ContentControl x:Name="ActiveItem" 
+                            Grid.Row="4" 
+                            Grid.Column="0">
+            </ContentControl>
+        </Grid>
+    </Border>
 </Window>
