--- a/src/WPFDesktopUI/Views/ShellView.xaml
+++ b/src/WPFDesktopUI/Views/ShellView.xaml
@@ -33,6 +33,11 @@
                        Grid.Row="0" 
                        Grid.Column="0">
             </TextBlock>
+            <TextBlock Text="Description" 
+                       Grid.ColumnSpan="2"
+                       Grid.Row="0" 
+                       Grid.Column="2">
+            </TextBlock>
 
             <!-- Row 1 -->
             <TextBox x:Name="FirstName" 
@@ -43,6 +48,11 @@
             <TextBox x:Name="LastName" 
                      Grid.Row="1" 
                      Grid.Column="1" 
+                     MinWidth="100">
+            </TextBox>
+            <TextBox x:Name="QbDescription" 
+                     Grid.Row="1" 
+                     Grid.Column="2" 
                      MinWidth="100">
             </TextBox>
 
@@ -63,6 +73,11 @@
                     Grid.Row="3"
                     Grid.Column="0">
                 Clear Text
+            </Button>
+            <Button x:Name="QbImport" 
+                    Grid.Row="3"
+                    Grid.Column="2">
+                Import to QB
             </Button>
 
             <!-- Row 4 -->
