added spreadsheet data structure into xaml

--- a/src/WPFDesktopUI/Views/ShellView.xaml
+++ b/src/WPFDesktopUI/Views/ShellView.xaml
@@ -111,10 +111,19 @@
             <TextBlock Text="{Binding Path=ConsoleMessage, Mode=OneWay}"
                        Grid.Row="4" 
                        Grid.Column="0"
-                       Grid.ColumnSpan="4"
+                       Grid.ColumnSpan="3"
                        FontSize="18"
                        Foreground="Red">
             </TextBlock>
+            <DataGrid x:Name="CsvData"
+                      Grid.Row="4"
+                      Grid.Column="3"
+                      Grid.RowSpan="5"
+                      Grid.ColumnSpan="4"
+                      AlternatingRowBackground="LightGray"
+                      CanUserAddRows="False">
+            </DataGrid>
+                          
         </Grid>
     </Border>
 </Window>
