--- a/src/WPFDesktopUI/App.xaml
+++ b/src/WPFDesktopUI/App.xaml
@@ -1,12 +1,14 @@
 ﻿<Application x:Class="WPFDesktopUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:properties="clr-namespace:WPFDesktopUI.Properties"
              xmlns:local="clr-namespace:WPFDesktopUI">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary>
                     <local:Bootstrapper x:Key="Bootstrapper" />
+                    <properties:Settings x:Key="Settings" />
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
