--- a/src/WPFDesktopUI/Views/PreferencesView.xaml
+++ b/src/WPFDesktopUI/Views/PreferencesView.xaml
@@ -7,6 +7,7 @@
         xmlns:cal="http://www.caliburnproject.org"
         xmlns:local="clr-namespace:WPFDesktopUI.Views"
         mc:Ignorable="d"
+        cal:Message.Attach="[Event Closing] = [Action OnClose()]"
         Title="Preferences" Height="450" Width="800" MinHeight="200" MinWidth="400">
 
     <Window.Resources>
