--- a/src/WPFDesktopUI/Views/ImportView.xaml
+++ b/src/WPFDesktopUI/Views/ImportView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WPFDesktopUI.Views"
              mc:Ignorable="d" 
+             Background="White"
              d:DesignHeight="450" d:DesignWidth="800">
     <Border BorderThickness="20">
         <Grid>
