--- a/src/WPFDesktopUI/Views/ShellView.xaml
+++ b/src/WPFDesktopUI/Views/ShellView.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:WPFDesktopUI.Views"
         xmlns:NewUserControl="clr-namespace:WPFDesktopUI.Views"
         mc:Ignorable="d"
+        Icon="Images/icon-sangwa.png"
         Title="ShellView" Height="600" Width="1000">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
