--- a/src/WPFDesktopUI/Views/ImportView.xaml
+++ b/src/WPFDesktopUI/Views/ImportView.xaml
@@ -70,7 +70,7 @@
                       Grid.Column="0"
                       Grid.ColumnSpan="3"
                       AlternatingRowBackground="LightGray"
-                      CanUserAddRows="False">
+                      CanUserAddRows="False" SelectionChanged="CsvData_SelectionChanged">
             </DataGrid>
         </Grid>
     </Border>
