--- a/src/WPFDesktopUI/Style.xaml
+++ b/src/WPFDesktopUI/Style.xaml
@@ -26,4 +26,15 @@
         <Setter Property="Padding" Value="5,0"/>
         <Setter Property="Margin" Value="10,0"/>
     </Style>
+    <Style x:Key="QbSidePaneKey" TargetType="{x:Type TextBlock}">
+        <Setter Property="Grid.Row" Value="0"/>
+        <Setter Property="MinWidth" Value="40"/>
+        <Setter Property="Padding" Value="5,0"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+    <Style x:Key="QbSidePaneValue" TargetType="{x:Type Control}">
+        <Setter Property="Grid.Row" Value="1"/>
+        <Setter Property="Padding" Value="5,0"/>
+        <Setter Property="MinWidth" Value="40"/>
+    </Style>
 </ResourceDictionary>
