--- a/src/WPFDesktopUI/Views/Preferences/PreferencesQuickBooksView.xaml
+++ b/src/WPFDesktopUI/Views/Preferences/PreferencesQuickBooksView.xaml
@@ -21,6 +21,12 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -73,7 +79,7 @@
                 Grid.Column="0"
                 IsEnabled="{Binding IsChecked, ElementName=UsingTemplate, Mode=OneWay}"
                 Text="{Binding Source={StaticResource Settings}, Path=Default.StnQbInvTemplateName}"
-                Margin="30,0"
+                Margin="50,0"
                 MinWidth="100"
                 HorizontalAlignment="Left"
                 Height="18"
@@ -122,6 +128,51 @@
         <!-- ROW 8 -->
         <StackPanel  Orientation="Vertical"
                     Grid.Row="8"
+                    Grid.ColumnSpan="2"
+                    >
+            <Separator Grid.ColumnSpan="2"/>
+            <TextBlock Text="Rename Headers" 
+                       Style="{StaticResource Pref1}"
+                       />
+        </StackPanel >
+
+        <!-- ROW 9 -->
+        <CheckBox x:Name="RenameHeaderOtherCheckBox"
+                  Grid.Row="9"
+                  Grid.Column="0"
+                  IsChecked="{Binding Source={StaticResource Settings}, Path=Default.StnQbInvHasHeaderOther}"
+                  Style="{StaticResource Check1}"
+                  Content="Using 'Other' field in QuickBooks header">
+        </CheckBox>
+
+
+
+        <!-- ROW 10 -->
+        <StackPanel Orientation="Horizontal"
+                    Grid.Row="10"
+                    Grid.Column="0"
+                    Margin="10,0">
+            <TextBlock Style="{StaticResource Pref2}">
+                    Custom Name for 'Other' Header:
+            </TextBlock>
+        </StackPanel>
+
+        <!-- ROW 11 -->
+        <TextBox x:Name="RenameHeaderOtherTextBox"
+                Grid.Row="11"
+                Grid.Column="0"
+                IsEnabled="{Binding IsChecked, ElementName=RenameHeaderOtherCheckBox, Mode=OneWay}"
+                Text="{Binding Source={StaticResource Settings}, Path=Default.StnQbInvHeaderOtherName}"
+                Margin="50,0"
+                MinWidth="100"
+                HorizontalAlignment="Left"
+                Height="18"
+                />
+
+
+        <!-- ROW 12 -->
+        <StackPanel  Orientation="Vertical"
+                    Grid.Row="12"
                     Grid.ColumnSpan="2"
                     >
             <Separator Grid.ColumnSpan="2"/>
