extended input box in WPF to stretch and cover all columns in QB side pane

--- a/src/WPFDesktopUI/Style.xaml
+++ b/src/WPFDesktopUI/Style.xaml
@@ -36,5 +36,6 @@
         <Setter Property="Grid.Row" Value="1"/>
         <Setter Property="Padding" Value="5,0"/>
         <Setter Property="MinWidth" Value="40"/>
+        <Setter Property="Grid.ColumnSpan" Value="2147483647"/>
     </Style>
 </ResourceDictionary>
