--- a/src/WPFDesktopUI/Views/PreferencesView.xaml
+++ b/src/WPFDesktopUI/Views/PreferencesView.xaml
@@ -8,6 +8,7 @@
         xmlns:local="clr-namespace:WPFDesktopUI.Views"
         mc:Ignorable="d"
         cal:Message.Attach="[Event Closing] = [Action OnClose()]"
+        Icon="Images/icon-sangwa.ico"
         Title="Preferences" Height="450" Width="800" MinHeight="200" MinWidth="400">
 
     <Window.Resources>
